changed button type of form customer to submit

--- a/WDP Project Final/main.html
+++ b/WDP Project Final/main.html
@@ -78,7 +78,7 @@
                     <input type="text" value="" id="compCity" name="compCity"><br>
                     <label for="compCountry">Country</label><br>
                     <input type="text" value="" id="compCountry" name="compCountry"/><br>
-                    <input type="button" class="ui-widget" value="saveCompany"/></input>
+                    <input type="submit" value="saveCompany" class="ui-widget"/>
                 </form>
             </div>
             <h2>Contacts</h2>
