added name to custSel

--- a/WDP Project Final/main.html
+++ b/WDP Project Final/main.html
@@ -60,7 +60,8 @@
 
             <div class="customer-form-container">
                 <form id="companyEditForm" name="companyEditForm" method="" action="">
-                    <select id="custSel" class="ui-selectmenu-button ui-widget ui-state-default ui-corner-all">
+                    <select id="custSel" name="custSel"
+                            class="ui-selectmenu-button ui-widget ui-state-default ui-corner-all">
                         <!-- Placeholder for Customers -->
                     </select>
                     <br>
