changed customer renderer (deleted style class)

--- a/WDP Project Final/main.html
+++ b/WDP Project Final/main.html
@@ -46,7 +46,7 @@
             $("#accordion").accordion();
         });
         $(function () {
-            $("#accordion1").accordion();
+            $("#accordion1").accordion({collapsible: true, active: true});
         });
     </script>
 </head>
