--- a/WDP Project Final/main.html
+++ b/WDP Project Final/main.html
@@ -46,9 +46,9 @@
     <!-- customer information sidebar -->
     <div class="row">
         <div id="accordion" class="col-sm-3 col-md-4">
-            <h2>Customer Information</h2>
+            <h2 id="panel-customer-header">Customer Information</h2>
 
-            <div class="customer-form-container">
+            <div id="panel-customer-body" class="customer-form-container">
                 <form id="companyEditForm" name="companyEditForm" method="" action="">
                     <select id="custSel" name="custSel"
                             class="ui-selectmenu-button ui-widget ui-state-default ui-corner-all">
@@ -69,18 +69,19 @@
                     <input type="text" value="" id="compCity" name="compCity"><br>
                     <label for="compCountry">Country</label><br>
                     <input type="text" value="" id="compCountry" name="compCountry"/><br>
-                    <input type="submit" value="saveCompany" class="ui-widget"/>
+                    <input type="submit" value="Speichern" class="ui-widget"/>
+                    <input id="deleteCompany" name="deleteCompany" type="button" value="Löschen"
+                           class="ui-widget"/>
                 </form>
             </div>
-            <h2>Contacts</h2>
 
-            <div class="contact-form-container">
-                <select id="contSel" class="ui-selectmenu-button ui-widget ui-state-default ui-corner-all">
-                    <!-- Placeholder for Contacts -->
-                </select>
-                <br>
+            <h2 id="panel-contact-header">Contacts</h2>
 
+            <div id="panel-contact-body" class="contact-form-container">
                 <form id="contactEditForm" name="contactEditForm" method="" action="">
+                    <select id="contSel" class="ui-selectmenu-button ui-widget ui-state-default ui-corner-all">
+                        <!-- Placeholder for Contacts -->
+                    </select>
                     <label for="contactLastName">LastName</label><br>
                     <input type="text" value="" id="contactLastName" name="contactLastName"/><br>
                     <label for="contactFirstName">FirstName</label><br>
@@ -89,7 +90,9 @@
                     <input type="email" value="" id="contactEmail" name="contactEmail"/><br>
                     <label for="contactPhone">Phone</label><br>
                     <input type="text" value="" id="contactPhone" name="contactPhone"/><br>
-                    <input type="submit" value="saveContact" class="ui-widget">
+                    <input type="submit" value="Speichern" class="ui-widget">
+                    <input id="deleteContact" name="deleteContact" type="button" value="Löschen"
+                           class="ui-widget"/>
                     </input>
 
                 </form>
@@ -97,10 +100,14 @@
         </div>
 
         <div id="accordion-dispo" class="col-sm-6 col-md-8">
-            <h2>Dispo Form Container</h2>
+            <h2 id="panel-dipso-header">Dispo Form Container</h2>
 
-            <div class="disposition-form-container" style="margin-top: 10px">
+            <div id="panel-dipso-body" class="disposition-form-container" style="margin-top: 10px">
                 <form id="dispositionForm" name="dispositionForm" method="" action="">
+                    <select id="dispoCcustSel" name="dispoCcustSel"
+                            class="ui-selectmenu-button ui-widget ui-state-default ui-corner-all">
+                        <!-- Placeholder for Customers -->
+                    </select>
                     <label>Anzahl Positionen</label><br>
                     <input type="text" value="0" id="countPositions" name=countPositions"/><br>
                     <label>Summe Gewicht</label><br>
@@ -109,7 +116,7 @@
                     <input type="text" value="" id="notficationNumber" name="notificationNumber"/><br>
                     <label>Lieferanten Nummer</label><br>
                     <input type="text" value="" id="supplierNumber" name="supplierNumber"/><br>
-                    <input id="saveButton" type="button" class="ui-widget" value="save"/>
+                    <input id="saveButton" type="submit" class="ui-widget" value="Speichern"/>
                     <input id="resetButton" type="button" class="ui-widget" value="reset"/>
                     <input id="addPositionButton" type="button" class="ui-widget" value="addPosition"/>
                 </form>
