form methods post

--- a/WDP Project Final/main2.html
+++ b/WDP Project Final/main2.html
@@ -161,7 +161,7 @@
             <h2>Dispo Form Container</h2>
 
             <div class="disposition-form-container" class="form-horizontal" style="margin-top: 10px">
-                <form id="dispositionForm" name="dispositionForm" method="" action="">
+                <form id="dispositionForm" name="dispositionForm" method="post" action="">
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="countPositions">Anzahl Positionen</label>
 
