--- a/WDP Project Final/main2.html
+++ b/WDP Project Final/main2.html
@@ -35,9 +35,9 @@
     <!-- customer information sidebar -->
     <div class="row">
         <div id="accordion" class="col-sm-3 col-md-4">
-            <h2>Customer Information</h2>
+            <h2 id="panel-customer-header">Customer Information</h2>
 
-            <div class="customer-form-container" class="form-horizontal">
+            <div id="panel-customer-body" class="customer-form-container" class="form-horizontal">
                 <form id="companyEditForm" name="companyEditForm" method="post" action="">
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="compName">Kunde</label>
@@ -104,9 +104,9 @@
 
                 </form>
             </div>
-            <h2>Contacts</h2>
+            <h2 id="panel-contact-header">Contacts</h2>
 
-            <div class="contact-form-container" class="form-horizontal">
+            <div id="panel-contact-body" class="contact-form-container" class="form-horizontal">
                 <form id="contactEditForm" name="contactEditForm" method="post" action="">
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="contSel">Kontakt</label>
@@ -158,9 +158,9 @@
         </div>
 
         <div id="accordion-dispo" class="col-sm-6 col-md-8">
-            <h2>Dispo Form Container</h2>
+            <h2 id="panel-dispo-header">Dispo Form Container</h2>
 
-            <div class="disposition-form-container" class="form-horizontal" style="margin-top: 10px">
+            <div id="panel-dispo-body" class="disposition-form-container" class="form-horizontal" style="margin-top: 10px">
                 <form id="dispositionForm" name="dispositionForm" method="post" action="">
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="countPositions">Anzahl Positionen</label>
