--- a/WDP Project Final/main2.html
+++ b/WDP Project Final/main2.html
@@ -1,9 +1,9 @@
+<!DOCTYPE html>
 <!--
 /**
  * Created by Tom on 03.01.15.
  */
 -->
-<!DOCTYPE html>
 <html>
 <head lang="de">
     <meta charset="UTF-8">
@@ -37,8 +37,8 @@
         <div id="accordion" class="col-sm-3 col-md-4">
             <h2 id="panel-customer-header">Customer Information</h2>
 
-            <div id="panel-customer-body" class="customer-form-container" class="form-horizontal">
-                <form id="companyEditForm" name="companyEditForm" method="post" action="">
+            <div id="panel-customer-body" class="form-horizontal">
+                <form id="companyEditForm" name="companyEditForm" method="post">
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="compName">Kunde</label>
 
@@ -106,8 +106,8 @@
             </div>
             <h2 id="panel-contact-header">Contacts</h2>
 
-            <div id="panel-contact-body" class="contact-form-container" class="form-horizontal">
-                <form id="contactEditForm" name="contactEditForm" method="post" action="">
+            <div id="panel-contact-body" class="form-horizontal">
+                <form id="contactEditForm" name="contactEditForm" method="post">
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="contSel">Kontakt</label>
 
@@ -148,9 +148,8 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <input type="submit" name="saveContact" value="speichern" class="btn btn-default">
-                        <input type="submit" name="deleteContact" value="löschen" class="btn btn-default">
-                        </input>
+                        <input type="submit" name="saveContact" value="speichern" class="btn btn-default"/>
+                        <input type="submit" name="deleteContact" value="löschen" class="btn btn-default"/>
                     </div>
 
                 </form>
@@ -160,20 +159,21 @@
         <div id="accordion-dispo" class="col-sm-6 col-md-8">
             <h2 id="panel-dispo-header">Dispo Form Container</h2>
 
-            <div id="panel-dispo-body" class="disposition-form-container" class="form-horizontal" style="margin-top: 10px">
-                <form id="dispositionForm" name="dispositionForm" method="post" action="">
+            <div id="panel-dispo-body" class="form-horizontal" style="margin-top: 10px">
+                <form id="dispositionForm" name="dispositionForm" method="post">
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="countPositions">Anzahl Positionen</label>
 
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" value="0" id="countPositions" name=countPositions"/>
+                            <input type="text" class="form-control" value="0" id="countPositions" name="countPositions"
+                                   readonly/>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="sumWeight">Summe Gewicht</label>
 
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" value="0" id="sumWeight" name="sumWeight"/>
+                            <input type="text" class="form-control" value="0" id="sumWeight" name="sumWeight" readonly/>
                         </div>
                     </div>
                     <div class="form-group">
