removed horizontal-form alignment

--- a/WDP Project Final/main2.html
+++ b/WDP Project Final/main2.html
@@ -37,7 +37,7 @@
         <div id="accordion" class="col-sm-3 col-md-4">
             <h2 id="panel-customer-header">Customer Information</h2>
 
-            <div id="panel-customer-body" class="form-horizontal">
+            <div id="panel-customer-body">
                 <form id="companyEditForm" name="companyEditForm" method="post">
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="compName">Kunde</label>
@@ -106,7 +106,7 @@
             </div>
             <h2 id="panel-contact-header">Contacts</h2>
 
-            <div id="panel-contact-body" class="form-horizontal">
+            <div id="panel-contact-body">
                 <form id="contactEditForm" name="contactEditForm" method="post">
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="contSel">Kontakt</label>
@@ -159,7 +159,7 @@
         <div id="accordion-dispo" class="col-sm-6 col-md-8">
             <h2 id="panel-dispo-header">Dispo Form Container</h2>
 
-            <div id="panel-dispo-body" class="form-horizontal" style="margin-top: 10px">
+            <div id="panel-dispo-body" style="margin-top: 10px">
                 <form id="dispositionForm" name="dispositionForm" method="post">
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="countPositions">Anzahl Positionen</label>
