--- a/WDP Project Final/main2.html
+++ b/WDP Project Final/main2.html
@@ -192,9 +192,12 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <input id="saveButton" type="button" class="btn btn-default" value="speichern"/>
-                        <input id="resetButton" type="button" class="btn btn-default" value="löschen"/>
-                        <input id="addPositionButton" type="button" class="btn btn-default" value="hinzufügen"/>
+                        <input id="saveButton" type="submit" name="savePosition" class="btn btn-default"
+                               value="speichern"/>
+                        <input id="resetButton" type="button" name="deletePosition" class="btn btn-default"
+                               value="löschen"/>
+                        <input id="addPositionButton" name="addPosition" type="button" class="btn btn-default"
+                               value="hinzufügen"/>
                     </div>
                 </form>
                 <div id="position-accordion">
