--- a/WDP Project Final/main2.html
+++ b/WDP Project Final/main2.html
@@ -149,7 +149,7 @@
                     </div>
                     <div class="form-group">
                         <input type="submit" name="saveContact" value="speichern" class="btn btn-default"/>
-                        <input type="submit" name="deleteContact" value="löschen" class="btn btn-default"/>
+                        <input type="button" name="deleteContact" value="löschen" class="btn btn-default"/>
                     </div>
 
                 </form>
@@ -161,6 +161,24 @@
 
             <div id="panel-dispo-body" style="margin-top: 10px">
                 <form id="dispositionForm" name="dispositionForm" method="post">
+                    <div class="form-group">
+                        <label class="col-sm-4 control-label" for="dispoCustSel">Kunde</label>
+
+                        <div class="col-sm-8">
+                            <select id="dispoCustSel" name="dispoCustSel" class="form-control">
+                                <!-- Placeholder for Customers -->
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-4 control-label" for="dispoContSel">Kontakt</label>
+
+                        <div class="col-sm-8">
+                            <select id="dispoContSel" name="dispoContSel" class="form-control">
+                                <!-- Placeholder for Customers -->
+                            </select>
+                        </div>
+                    </div>
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="countPositions">Anzahl Positionen</label>
 
